force-app/main/default/objects/Docket_Role__c/Docket_Role__c.object-meta.xml
<CustomObject>
    <label>Docket Role</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Docket Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docket Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>