force-app/main/default/objects/Docket_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Docket Roles</relationshipLabel>
    <relationshipName>Docket_Roles_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>