force-app/main/default/objects/Docket_Role__c/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <label>Docket</label>
    <referenceTo>Docket__c</referenceTo>
    <relationshipLabel>Docket Roles</relationshipLabel>
    <relationshipName>Docket_Roles_Docket</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>